--- a/style.css
+++ b/style.css
@@ -10,15 +10,19 @@
     --cor-cinco: #D6D6D6;
 }
 
+body {
+    box-sizing: border-box;
+}
+
 h1 {
     font-family: var(--fonte-um);
     font-size: 1.5rem;
-    margin: 0;
 }
 
 h3 {
     font-size: 1rem;
     font-weight: 400;
+    margin: 0;
 }
 
 .cabecalho {
@@ -54,6 +58,46 @@ h3 {
     width: 100%;
     height: 100%;
     box-shadow: -9px 8.5px 4px var(--cor-cinco);
+    overflow-y: auto;
+}
+
+.produtos {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    justify-content: space-evenly;
+    font-family: var(--fonte-dois);
+    color: var(--cor-tres);
+}
+
+.produto_item {
+    list-style-type: none;
+    width: 13.6vw;
+    height: fit-content;
+    margin-bottom: 4.8rem;
+    background-color: var(--cor-um);
+    padding: 0.6rem;
+    border: medium solid var(--cor-quatro);
+    border-radius: 0.9rem;
+}
+
+.produto_imagem {
+    width: 100%;
+    aspect-ratio: 1/1;
+    margin-bottom: 0.7rem;
+}
+
+.produto_barra {
+    display: flex;
+    font-weight: 700;
+    justify-content: space-between;
+    height: 1.5rem;
+    align-items: center;
+    margin-top: 0.7rem;
+}
+
+.produto_barra_icone:hover {
+    cursor: pointer;
 }
 
 .secao_formulario {
